2011-01-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Projects/Application/PCAppProject+Inspector.m
	(-setDocBasedApp:):
	Fix bug where the document based app flag was reset after opening
	the project inspector for the first time.

2010-12-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectBuilder.m (-buildArguments): Add either
	debug=yes or debug=no to the arguments since the debug variable no
	longer has a clear default for quite some time.

2010-12-22 German Arias <german@xelalug.org>
	
	* Headers/ProjectCenter/PCProject.h:
	Added method -resourceDirForLanguage:. So we can call this
	method to manage the languages.
	* Headers/ProjectCenter/PCProjectInspector.h:
	* Framework/PCProjectInspector.m:
	* Framework/English.lproj/ProjectLanguages.gorm:
	Added UI controls for languages at Inspector, and methods
	-addLanguage: and -removeLanguage:.

2010-12-18 German Arias <german@xelalug.org>
	
	* Headers/ProjectCenter/PCProjectInspector.h:
	* Framework/PCProjectInspector.m:
	* Framework/English.lproj/ProjectInspector.gorm:
	Added "Project Languages" option on Inspector.

2010-12-04  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectBuilder.m (-build:, -logStdOut:, -logErrOut:):
	Fix race condition, which could lock PC after running a build
	task.

2010-12-04  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectManager.m (-newProject):
	Improve Riccardo's previous patch. Don't ask for a new project
	directory with an extension project or pcproj and do not
	arbitrarily strip extensions from the project name.

2010-12-04 German Arias <german@xelalug.org>
	
	* Modules/Projects/Application/PCAppProject.m: 
	Reverted a previous change since the extension "project"
	is not used anymore.

2010-12-01 Riccardo Mottola

	* Framework/PCProjectManager.m:
	Create project in a path with the project name.

	* Resources/Info-gnustep.plist,
	* English.lproj/Info.gorm
	Version bump.

	* Framework/PCProjectBuilder.m: